--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,69 @@
-/*Styles*/
+/* ---------- Font Styles*/
+html {
+  font-size: 1em;
+}
 body {
-  background-color: wheat;
+  background-image:linear-gradient(90deg, #c33764 , #1d2671);
   margin:0;
-  padding:0;
+  padding:50px 10vw;
+  color: white;
+  font-family: 'PT Sans', sans-serif;
 }
-img {
-  margin:0;
+h1, h2, h3, h4 {
+  font-family: 'Russo One', sans-serif;
+  color: #0a0d29;
+  text-shadow: 1px 1px 2px #ffb88c;
 }
+h1 {
+  font-size: 3rem;
+}
+header h1 {
+  font-size: 5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+p, span {
+  font-size: 1.25rem;
+}
+a {
+  text-decoration: none;
+  color: #ffb88c ;
+  font-weight: bold;
+}
+/* ------------ Elements*/
+header img {
+  max-width: 30vw;
+  max-height: 600px;
+  height: auto;
+  margin: 0 0 50px 50px;
+  border: 6px solid #ff8133;
+  border-radius: 50%;
+  float: right;
+  z-index: -1;
+}
+.white-section {
+  background-color: #f8f8ff;
+  margin: 0 -10vw;
+  padding: 50px 10vw;
+  /* height: 80vh; */
+  transform: skewY(-3deg);
+}
+.white-section h1, .white-section h2 {
+  color: #c33764;
+  text-shadow: 2px 2px 2px grey;
+}
+.white-section p {
+  color: #1d2671;
+}
+.white-section a {
+  color: #ff8133;
+}
+.leveled-content {
+  transform: skewY(3deg);
+}
+footer {
+
+  padding-top: 100px;
+}
+/*-------------- For smaller screens */
