--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,80 @@
-/* ---------- Font Styles*/
-html {
+/* ------------------------------------------------------ || GENERAL STYLES */
+
+/* html {
   font-size: 1em;
-}
-body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-image:linear-gradient(90deg, #c33764 , #1d2671);
-  margin:0;
-  padding:50px 10vw;
+} */
+body {
+  /* background-image:linear-gradient(90deg, #c33764 , #1d2671); */
+  /* margin:0; */
+  /* padding:50px 10vw; */
+  font-size: 1em;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-image:linear-gradient(90deg, #c33764 , #1d2671);
   color: white;
   font-family: 'PT Sans', sans-serif;
 }
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Russo One', sans-serif;
   color: #0a0d29;
   text-shadow: 1px 1px 2px #ffb88c;
 }
-h1 {
-  font-size: 3rem;
-}
-header h1 {
-  font-size: 5rem;
-}
-h2 {
-  font-size: 2rem;
-}
-p, span {
-  font-size: 1.25rem;
-}
+
+header h1 {font-size: 5rem;}
+
+h1 {font-size: 3rem;}
+
+h2 { font-size: 2rem; }
+
+p, span { font-size: 1.25rem; }
+
 a {
   text-decoration: none;
-  color: #ffb88c ;
+  color: #ff8133;
   font-weight: bold;
 }
-/* ------------ Elements*/
+/* -------------------------------------------------------- || ANIMATIONS*/
+a:hover {color: #99ebff;}
+/* ------------------------------------------------------ || OTHER STYLES*/
+#main-nav {
+  width: 100vw;
+  height: 68px;
+  border: 1px solid black;
+  margin: -50px 0 0 -10vw;
+  padding: 0;
+}
+#main-nav ul {
+  list-style-type: none;
+  margin-right: auto;
+  margin-bottom: auto;
+  padding: 0;
+  overflow: hidden;
+}
+#main-nav li {
+  displav: inline;
+  float: left;
+  padding: 0;
+  border: 1px solid black;
+  margin: 0;
+  width: 4em;
+}
 header img {
-  /* max-width: 30vw;
-  max-height: 600px; */
   display: block;
   width: 85%;
   height: auto;
-  /* margin: 0 0 50px 50px; */
   margin: 0 auto 0;
   border: 6px solid #ff8133;
   border-radius: 50%;
-  /* float: right; */
 }
 .white-section {
   background-color: #f8f8ff;
   margin: 0 -10vw;
   padding: 50px 10vw;
-  /* height: 80vh; */
   transform: skewY(-3deg);
 }
 .white-section h1, .white-section h2 {
@@ -65,15 +91,13 @@ header img {
   transform: skewY(3deg);
 }
 footer {
-
   padding-top: 100px;
 }
-/*-------------- For larger screens */
+/*-------------------------------------------------- || FOR LARGER SCREENS */
 @media screen and (min-width: 760px) {
   header img {
     max-width: 500px;
     max-height: 500px;
-    /* height: auto; */
     margin: 0 0 50px 50px;
     border: 6px solid #ff8133;
     border-radius: 50%;
